--- a/lib/yeah-web/container.html.erb
+++ b/lib/yeah-web/container.html.erb
@@ -19,14 +19,9 @@
     }
 
     canvas {
-      image-rendering: optimizeSpeed;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: -o-crisp-edges;
-      image-rendering: -webkit-optimize-contrast;
-      image-rendering: optimize-contrast;
-      image-rendering: crisp-edges;
-      image-rendering: pixelated;
-      -ms-interpolation-mode: nearest-neighbor;
+      position: absolute;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
