Extend core classes; add FillLook, stub ImageLook

--- a/lib/yeah-web/container.html.erb
+++ b/lib/yeah-web/container.html.erb
@@ -10,7 +10,7 @@
     }
 
     body {
-      background: gray;
+      background: black;
       -moz-user-select: none;
       -khtml-user-select: none;
       -webkit-user-select: none;
@@ -19,7 +19,6 @@
     }
 
     canvas {
-      outline: 1px dashed black;
       margin: auto;
       position: absolute;
       top: 0;
